Quick override to resources menu margin bottom. Added conditional logic to cart options to only show if selected to avoid extra white space when not selected.

--- a/wp-content/themes/arizona-envelope/assets/styles/components/_panels.scss
+++ b/wp-content/themes/arizona-envelope/assets/styles/components/_panels.scss
@@ -411,6 +411,7 @@ section{
 			.menu-item{
 				max-width: 25%;
 				min-width: 22%;
+				margin-bottom: 0;
 				@media screen and (max-width: $breakpoint--large){
 					min-width: 100%;
 					max-width: 100%;
